--- a/css/styles.css
+++ b/css/styles.css
@@ -488,6 +488,7 @@ body {
 }
 .subscribe-btn-position {
   display: flex;
+  margin-left: -24px;
 }
 .subscribe-button {
   position: relative;
@@ -655,7 +656,7 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
 
-  background: #fcfcfc;
+  background-color: #fcfcfc;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
@@ -701,6 +702,7 @@ body {
   width: 100%;
   height: 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
+  background-color: transparent;
   border-radius: 4px;
   padding-left: 38px;
   outline: none;
@@ -714,14 +716,15 @@ body {
   outline: none;
   border-color: #4d5ae5;
 }
-.modal-form-input:focus + .modal-form-input-icon {
+.modal-form-input:focus + .form-icon {
   fill: #4d5ae5;
 }
 .modal-form-message {
   font-size: 12px;
+  background-color: transparent;
   resize: none;
   width: 100%;
-  height: 100px;
+  height: 120px;
   padding-left: 16px;
   padding-top: 8px;
   padding-right: 16px;
